force-app/main/default/objects/ASF_Asset_Metadata__mdt/ASF_Asset_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>ASF Asset Metadata</label>
    <pluralLabel>ASF Asset Metadatas</pluralLabel>
</CustomObject>