force-app/main/default/objects/ASF_Asset_Metadata__mdt/fields/Fields_to_Fetch__c.field-meta.xml
<CustomField>
    <fullName>Fields_to_Fetch__c</fullName>
    <label>Fields to Fetch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>