force-app/main/default/objects/ASF_Asset_Metadata__mdt/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <label>Line Of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABHFL</fullName>
                <default>true</default>
                <label>ABHFL</label>
            </value>
            <value>
                <fullName>ABFL</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>ABSLI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>