force-app/main/default/objects/ASF_Asset_Metadata__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NamespacePrefix</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Fields_to_Fetch__c</columns>
    <columns>Field_Mapping__c</columns>
    <columns>Line_Of_Business__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>